(backend) fix bug page 1 attendance can not show data